# EHauto

./: .gitignore
一、画廊筛选下载/: README.md  ehentai_downloader.py  ehentai_value_filter.py  pyproject.toml
二、种子生成做种/: .env.example  README.md  create_torrent.py  ehentai_uploader.py  full_workflow.py  pyproject.toml  seed_personalized.py
